# hdcharts

./: README.markdown  README2.markdown  hdcharts.cabal
src/Chart/: Bar.hs  BarW.hs  Combo.hs  Heatmap.hs  Line.hs  Render.hs  Scatter.hs  Text.hs  Types.hs
src/Data/: Random.hs  Rect.hs  XY.hs  XYZ.hs
src/Data/Aeson/: ByteString.hs
src/Language/Javascript/JMacro/: D3Expr.hs
src/Lucid/: Css.hs  Js.hs  Server.hs  Svg.hs
src/Pipes/: Monoid.hs  Util.hs
src/Web/: Page.hs  Play.hs  Socket.hs
src/Web/Play/: MVC.hs  Types.hs
test/: example.hs
