name:                hdcharts
version:             0.1.0.0
synopsis:            haskell driven charts, using the d3 library
-- description:
-- license:             
license-file:        LICENSE
author:              Tony Day
maintainer:          tonyday567@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Chart.Bar
                     , Chart.BarW
                     , Chart.Combo
                     , Chart.Heatmap
                     , Chart.Line
                     , Chart.Render
                     , Chart.Scatter
                     , Chart.Text
                     , Chart.Types
                     , Data.Random
                     , Data.Rect
                     , Data.XY
                     , Data.XYZ
                     , Lucid.Css
                     , Lucid.Js
                     , Lucid.Server
                     , Lucid.Svg
                     , Web.Page
                     , Web.Play
                     , Web.Play.MVC
                     , Web.Play.Types
                     , Web.Socket

  other-modules:       Data.Aeson.ByteString
                     , Pipes.Monoid
                     , Pipes.Util
                     , Language.Javascript.JMacro.D3Expr
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.8
                     , aeson               
                     , async               
                     , attoparsec             
                     , blaze-builder       
                     , bytestring             
                     , clay                
                     , containers          
                     , data-default        
                     , foldl               
                     , foldl-incremental   
                     , happstack-server >= 7.4.0    
                     , histogram-fill
                     , jmacro              
                     , language-javascript 
                     , lens                
                     , lucid               
                     , managed
                     , mtl                 
                     , mvc
                     , mwc-random          
                     , network
                     , pipes               
                     , pipes-attoparsec    
                     , pipes-binary        
                     , pipes-bytestring    
                     , pipes-parse         
                     , pipes-safe          
                     , primitive           
                     , text
                     , transformers >= 0.4.2.0        
                     , vector              
                     , websockets

  hs-source-dirs:      src, test
  default-language:    Haskell2010
  ghc-options:         -O2 -fsimpl-tick-factor=200


executable example
  main-is:             example.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -fsimpl-tick-factor=200 -threaded
  hs-source-dirs:      test, src
  build-depends:       base >= 4 && < 5
                     , aeson               
                     , async               
                     , attoparsec             
                     , blaze-builder       
                     , bytestring             
                     , clay                
                     , containers          
                     , data-default        
                     , foldl               
                     , foldl-incremental   
                     , happstack-server >= 7.4.0    
                     , histogram-fill
                     , jmacro              
                     , language-javascript 
                     , lens                
                     , lucid               
                     , managed
                     , mtl                 
                     , mvc
                     , mwc-random          
                     , network
                     , pipes               
                     , pipes-attoparsec    
                     , pipes-binary        
                     , pipes-bytestring    
                     , pipes-parse         
                     , pipes-safe          
                     , primitive           
                     , text
                     , transformers >= 0.4.2.0        
                     , vector              
                     , websockets